jlamontSC-test/src/objects/TriggeredSendEmail__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LastErrorMessage__c</fullName>
        <label>LastErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastErrorStatus__c</fullName>
        <label>LastErrorStatus</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastErrorTime__c</fullName>
        <label>LastErrorTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>RequestBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendId__c</fullName>
        <label>SendId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>StatusCode</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubscriberKey__c</fullName>
        <label>SubscriberKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeSent__c</fullName>
        <label>TimeSent</label>
        <type>DateTime</type>
    </fields>
    <label>TriggeredSendEmail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SendId__c</columns>
        <columns>StatusCode__c</columns>
        <columns>TimeSent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>SendId__c</columns>
        <columns>Email__c</columns>
        <columns>StatusCode__c</columns>
        <columns>TimeSent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Errored</fullName>
        <columns>NAME</columns>
        <columns>StatusCode__c</columns>
        <columns>TimeSent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LastErrorTime__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Errored</label>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <columns>StatusCode__c</columns>
        <columns>RequestBody__c</columns>
        <columns>TimeSent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SendId__c</field>
            <operation>equals</operation>
            <value>event-autoresponder</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>Not_Sent</fullName>
        <columns>NAME</columns>
        <columns>StatusCode__c</columns>
        <columns>TimeSent__c</columns>
        <columns>Resend__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StatusCode__c</field>
            <operation>notEqual</operation>
            <value>202</value>
        </filters>
        <label>Not Sent</label>
    </listViews>
    <nameField>
        <displayFormat>TSE-{00000000}</displayFormat>
        <label>TriggeredSendEmail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TriggeredSendEmails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>